# rail_robot

./: .gitmodules  README.md  install.sh
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/scripts/: groundingdino_node.py
src/object_detection/srv/: ObjectDetectionSrv.srv
src/pano_camera/: README.md  package.xml  setup.cfg  setup.py
src/pano_camera/launch/: pano_camera.launch.py
src/planner/: package.xml  setup.py
src/planner/planner/: base_planner.py  base_task_planner.py  image_saver.py  object_detection.py  object_detection_local.py  plotting.py  prompt_selection_planner.py  prompt_selection_planner_new.py  robot_pose.py  test_object_detection.py  utils.py
src/rail_map/: package.xml  setup.cfg  setup.py
src/rail_map/rail_map/: core.py  rail_map_node.py  simulators.py
src/rail_msgs/: CMakeLists.txt  package.xml
src/rail_msgs/srv/: CreateTFFrame.srv  GoToLocation.srv
src/rail_robot/: CMakeLists.txt  package.xml
src/rail_robot/config/: joystick_params.yaml  kobuki_node_params.yaml  kobuki_node_params2.yaml  namespaced_rviz.rviz  nav2_params.yaml  nav2_params2.yaml  nav2_params_official.yaml  ros2_control_sim.yaml  slam_toolbox_online_async.yaml  slam_toolbox_online_async2.yaml
src/rail_robot/launch/: nav2_launch.py  rail_robot.launch.py  rail_robot2.launch.py  rail_robot_core.launch.py  rail_robot_description.launch.py  robot.launch.py  (+12 more)
src/ricoh_theta_s_camera/: package.xml  setup.cfg  setup.py
src/ricoh_theta_s_camera/launch/: pano_camera.launch.py
src/ricoh_theta_s_camera/ricoh_theta_s_camera/: pano_camera_node.py
(+40 files in other folders)
